--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t adamalad/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run adamalad/docker-react npm run test -- -- coverage #-- -- coverage is added so the test exists and doesn't hang
+  - docker run -e CI=true adamalad/docker-react npm run test
